Authenticate google login on server Add mybatis migrate for DB scripting Prune down account Type to not reveal secure information
Wow that was not fun...

--- a/server/composer.json
+++ b/server/composer.json
@@ -4,7 +4,8 @@
 	"require": {
 		"sergeytsalkov/meekrodb": "*",
 		"webonyx/graphql-php": "^0.13.8",
-		"ext-json": "*"
+		"ext-json": "*",
+		"google/apiclient": "^2.0"
 	},
 	"config": {
 		"optimize-autoloader": true
