Add graphql login webservice
GraphQL now accomplishes login as well as can get period information.

--- a/client/package.json
+++ b/client/package.json
@@ -27,14 +27,15 @@
     "axios": "^0.18.0",
     "clone": "^2.1.2",
     "core-js": "^2.6.1",
-    "dts-react-common": "^4.4.22",
+    "dts-react-common": "^7.0.6",
     "inputmask": "^3.3.11",
     "is-blank": "^2.1.0",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "react-google-login": "^5.0.5",
     "react-markdown": "^4.0.4",
     "react-media": "^1.9.2",
     "react-redux": "^5.1.0",
