--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react-media": "^1.9.2",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
+    "react-text-mask": "^5.4.3",
     "redux": "^4.0.1",
     "typeface-roboto": "0.0.54"
   },
