--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react-router-dom": "^4.3.1",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.1",
+    "text-mask-addons": "^3.8.0",
     "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
