--- a/client/src/static/.htaccess
+++ b/client/src/static/.htaccess
@@ -1,6 +1,11 @@
 <IfModule mod_rewrite.c>
 
   RewriteEngine On
+  #### remove www from front of url
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ http://%1%{REQUEST_URI} [R=301,QSA,NC,L]
+
+  #### force all calls to the base url
   RewriteBase /
   RewriteRule ^index\.html$ - [L]
   RewriteCond %{REQUEST_FILENAME} !-f
